WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313570
[JSC] DFG `iterator_open` / `iterator_next` leave dangling failedBlock when a fast-mode watchpoint is invalidated
https://bugs.webkit.org/show_bug.cgi?id=313570
Summary
[JSC] DFG `iterator_open` / `iterator_next` leave dangling failedBlock when a...
Sosuke Suzuki
Reported
2026-04-28 13:48:52 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-04-28 13:52:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63829
EWS
Comment 2
2026-04-29 08:13:32 PDT
Committed
312290@main
(3f4f81750dc5): <
https://commits.webkit.org/312290@main
> Reviewed commits have been landed. Closing PR #63829 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-04-29 08:14:13 PDT
<
rdar://problem/175855233
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug